fix: Date-range selection calender of vendor dashboard broken on multiple themes

--- a/assets/src/less/dashboard.less
+++ b/assets/src/less/dashboard.less
@@ -17,6 +17,14 @@ div.media-sidebar a.edit-attachment{
     border-radius: 3px;
 }
 
+.daterangepicker {
+    .calendar-table {
+        th, td {
+            padding: 5px 10px;
+        }
+    }
+}
+
 .dokan-dashboard {
 
     .dokan-dashboard-wrap {
